@@ -364,6 +364,9 @@ S3method("length", "unit.arithmetic")
 S3method("length", "unit.list")
 S3method("length", "arrow")
 
+# S3 method for generic str (in utils)
+S3method("str", "unit.arithmetic")
+
 S3method("makeContent", "beziergrob")
 S3method("makeContent", "roundrect")
 S3method("makeContent", "curve")
